--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body{
     margin: 0px;
     padding: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* Cabeçalho */
 
 .header{
-    height: 400px;
+    height: 900px;
     width: 100vw;
     display: ;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #1F2937;
 }
 
@@ -18,7 +18,7 @@ body{
     justify-content: space-between;
     margin-left: 80px;
 
-    font-size: 16px;
+    font-size: 18px;
     color: white;
 }
 
@@ -34,29 +34,20 @@ body{
 
 }
 
-.titulo{
+.title{
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: 80px;
 
     color: white;
-    width: 400px;
     font-size: 16px;
+    width: 250px;
 }
 
-.imagem{
-    justify-content: flex-end;
-    width: 100vw;
-}
-
-img{
-    height: 200px;
-    width: 200px;
-}
 
 .botao{
-    display: flex;
+    display: inline-flex;
     margin-left: 80px;
 }
 
@@ -67,4 +58,52 @@ button{
     background-color:#3882F6 ;
     color: white;
     border-radius: 10px;
+}
+
+img{
+    height: 200px;
+    width: 200px;
+}
+
+.image{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-start;
+    margin-bottom: 1000px;
+
+
+
+}
+
+
+/*Seção */
+
+
+#parte1{
+    display: flex;
+    justify-content: flex-start;
+
+    width: 100vw;
+    height: 900px;
+    background-color: #F9FAF8;
+}
+
+.bloco{
+
+    height: 200px;
+    width: 200px;
+    border: 3px solid blue;
+}
+
+#parte2{
+    width: 100vw;
+    height: 900px;
+    background-color: #1F2937;
+}
+
+#parte3{
+    width: 100vw;
+    height: 900px;
+    background-color: #F9FAF8;
 }
