--- a/style.css
+++ b/style.css
@@ -7,10 +7,9 @@ body{
 /* Cabeçalho */
 
 .header{
-    height: 900px;
     width: 100vw;
-    display: ;
     background-color: #1F2937;
+    padding-bottom: 100px;
 }
 
 .cabecalho{
@@ -19,7 +18,7 @@ body{
     margin-left: 80px;
 
     font-size: 18px;
-    color: white;
+    color: #E5E7EB;
 }
 
 .links{
@@ -81,12 +80,17 @@ img{
 
 
 #parte1{
-    display: flex;
-    justify-content: flex-start;
-
     width: 100vw;
-    height: 900px;
+    margin-top: 100px;
     background-color: #F9FAF8;
+}
+
+.texto-parte1{
+    text-align: center;
+    font-size: 36px;
+    font-weight: 900px;
+    color: #1F2937;
+    margin-top: 100px;
 }
 
 .bloco{
@@ -94,16 +98,95 @@ img{
     height: 200px;
     width: 200px;
     border: 3px solid blue;
+
 }
 
-#parte2{
+.bloco-pai{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    gap: 16px;
+}
+
+.texto-pai{
+    display: flex;
+    justify-content:space-between;
+    align-items: flex-start;
+    margin-left: 80px;
+    margin-right: 80px;
+}
+
+.texto-filho{
+    width: 200px;
+    color: #1F2937
+}
+
+#Parte2{
     width: 100vw;
-    height: 900px;
-    background-color: #1F2937;
+    margin-top: 100px;
+    padding: 0px 25px;
+    background-color: #E5E7EB;
+}
+
+.texto-parte2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.p-parte2{
+    width: 400px;
+    font-size: 18px;
+}
+
+.filho-parte2{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+.texto-filho-parte2{
+    font-size: 18px;
+    font-weight: bolder;
 }
 
 #parte3{
     width: 100vw;
-    height: 900px;
+    margin-top: 100px;
+    padding: 25px;
     background-color: #F9FAF8;
+
+}
+
+.texto-parte3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882F6;
+    margin: auto;
+    width: 600px;
+    gap: 64px;
+}
+
+.p-parte3{
+    width: 300px;
+    height: 150px;
+    color: white;
+}
+
+.botao-parte3{
+    border: 3px solid white;
+}
+
+/*
+rodape
+*/
+.rodape{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    font-size: 18px;
+    color: #E5E7EB;
+    margin-top: 100px;
 }
