--- a/style.css
+++ b/style.css
@@ -18,7 +18,11 @@ body{
     margin-left: 80px;
 
     font-size: 18px;
-    color: #E5E7EB;
+    color: white;
+}
+
+.titulo-cabecalho{
+    margin-left: 80px;
 }
 
 .links{
@@ -27,27 +31,50 @@ body{
     align-items: flex-start;
 
     gap: 16px;
-    margin-right: 80px;
+    margin-right: 160px;
+    color: #E5E7EB;
 
     
 
 }
 
+.container{
+    display: flex;
+    justify-content: space-between;
+    width: 100vw;
+}
+
 .title{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    margin-left: 80px;
+    justify-content: flex-end;
+    margin-left: 160px;
 
     color: white;
     font-size: 16px;
     width: 250px;
 }
 
+img{
+    height: 200px;
+    width: 400px;
+}
+
+
+
+.imagem{
+    display: flex;
+
+    justify-content: center;
+    margin-right: 200px;
+
+
+}
 
 .botao{
     display: inline-flex;
-    margin-left: 80px;
+    margin-left: 160px;
+    
 }
 
 button{
@@ -59,21 +86,7 @@ button{
     border-radius: 10px;
 }
 
-img{
-    height: 200px;
-    width: 200px;
-}
 
-.image{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-start;
-    margin-bottom: 1000px;
-
-
-
-}
 
 
 /*Seção */
@@ -124,7 +137,7 @@ img{
 #Parte2{
     width: 100vw;
     margin-top: 100px;
-    padding: 0px 25px;
+    padding: 25px 25px;
     background-color: #E5E7EB;
 }
 
@@ -136,13 +149,15 @@ img{
 
 .p-parte2{
     width: 400px;
-    font-size: 18px;
+    font-size: 24px;
 }
 
 .filho-parte2{
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
+
+    margin-right: 320px;
 }
 
 .texto-filho-parte2{
@@ -164,18 +179,20 @@ img{
     align-items: center;
     background-color: #3882F6;
     margin: auto;
-    width: 600px;
+    border-radius: 10px;
+    width: 800px;
     gap: 64px;
 }
 
 .p-parte3{
-    width: 300px;
+    width: 500px;
     height: 150px;
     color: white;
 }
 
 .botao-parte3{
     border: 3px solid white;
+    margin-left: 30px;
 }
 
 /*
@@ -189,4 +206,5 @@ rodape
     font-size: 18px;
     color: #E5E7EB;
     margin-top: 100px;
+    margin-bottom: 20px;
 }
